--- a/templates/reports.html
+++ b/templates/reports.html
@@ -262,7 +262,7 @@
 
     <!-- 1. FINANCIAL REPORTS -->
     <div class="section-title">
-        <i class="fa-solid fa-chart-pie text-primary"></i> <b> Financial Analysis </b>
+        <i class="fa-solid fa-chart-pie text-primary text-dark"></i> Financial Analysis
     </div>
 
     <div class="grid-container">
@@ -331,7 +331,7 @@
 
     <!-- 2. SALES PERFORMANCE -->
     <div class="section-title">
-        <i class="fa-solid fa-arrow-trend-up text-success"></i> <b>Sales Performance </b>
+        <i class="fa-solid fa-arrow-trend-up text-success text-dark"></i> Sales Performance 
     </div>
 
     <div class="grid-container">
@@ -385,7 +385,7 @@
 
     <!-- 3. OPERATIONS & STAFF -->
     <div class="section-title">
-        <i class="fa-solid fa-box-open text-warning"></i> <b> Operations </b>
+        <i class="fa-solid fa-box-open text-warning text-dark"></i>  Operations 
     </div>
 
     <div class="grid-container">
@@ -424,4 +424,5 @@
 
 </div>
 {% endblock %}
+
 
