--- a/templates/inventory/category_master.html
+++ b/templates/inventory/category_master.html
@@ -4,6 +4,10 @@
 <div class="container py-4 fade-in-up">
     <div class="row justify-content-center">
         <div class="col-md-9">
+
+             <a href="{{ url_for('reports') }}" class="btn btn-light btn-sm rounded-pill px-3 border shadow-sm fw-bold">
+            <i class="fa-solid fa-arrow-left me-2"></i>Back
+        </a>
             
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <div>
@@ -155,3 +159,4 @@
     }
 </style>
 {% endblock %}
+
