--- a/templates/reports.html
+++ b/templates/reports.html
@@ -372,7 +372,7 @@
                 <i class="fa-solid fa-trophy"></i>
             </div>
             <div class="card-content">
-                <h3 class="card-header-text">Top Sellers</h3>
+                <h3 class="card-header-text">Top Products</h3>
                 <p class="card-body-text">Best products by volume/revenue.</p>
             </div>
             <div class="card-footer">
@@ -424,5 +424,6 @@
 
 </div>
 {% endblock %}
+
 
 
